# mckako

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
OncoRadiOS/: Package.swift  README.md
OncoRadiOS/OncoRadApp/: Info.plist  OncoRadApp.swift
OncoRadiOS/OncoRadApp/Models/: ClinicalCase.swift  Enums.swift  TreatmentResponse.swift
OncoRadiOS/OncoRadApp/Services/: OncoAPIService.swift
OncoRadiOS/OncoRadApp/Utilities/: Theme.swift
OncoRadiOS/OncoRadApp/ViewModels/: TreatmentViewModel.swift
OncoRadiOS/OncoRadApp/Views/: ClinicalInputView.swift  ContentView.swift  ProcessingView.swift  ResultView.swift  SourceView.swift
examples/: example_consultation.py
src/: __init__.py
src/oncorad/: __init__.py  config.py  hallucination_checker.py  models.py  prompt_generator.py  query_engine.py  vector_store.py
src/oncorad_rag/: __init__.py  config.py  ingest.py  main.py  query_engine.py  validator.py
tests/: __init__.py  test_config.py  test_hallucination_checker.py  test_models.py  test_prompt_generator.py  test_query_engine.py
